fix(iceberg): use JDBC URL

--- a/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
         CATALOG_CATALOG__IMPL: org.apache.iceberg.jdbc.JdbcCatalog
-        CATALOG_URI: "postgres://{{ .ICEBERG_POSTGRES_USER }}:{{ .ICEBERG_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/iceberg"
+        CATALOG_URI: "jdbc:postgresql://{{ .ICEBERG_POSTGRES_USER }}:{{ .ICEBERG_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/iceberg"
         CATALOG_S3_ENDPOINT: http://minio.default.svc.cluster.local:9000
         CATALOG_WAREHOUSE: s3://iceberg
         CATALOG_IO__IMPL: org.apache.iceberg.aws.s3.S3FileIO
