--- a/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
@@ -11,16 +11,18 @@ spec:
     name: iceberg-secret
     template:
       data:
-        # INIT_POSTGRES_DBNAME: "iceberg"
-        # INIT_POSTGRES_HOST: "postgres16-rw.database.svc.cluster.local"
-        # INIT_POSTGRES_USER: "{{ .ICEBERG_POSTGRES_USER }}"
-        # INIT_POSTGRES_PASS: "{{ .ICEBERG_POSTGRES_PASSWORD }}"
-        # INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        # INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
+        INIT_POSTGRES_DBNAME: "iceberg"
+        INIT_POSTGRES_HOST: "postgres16-rw.database.svc.cluster.local"
+        INIT_POSTGRES_USER: "{{ .ICEBERG_POSTGRES_USER }}"
+        INIT_POSTGRES_PASS: "{{ .ICEBERG_POSTGRES_PASSWORD }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        # CATALOG_JDBC_USER: "{{ .ICEBERG_POSTGRES_USER }}"
-        # CATALOG_JDBC_PASSWORD: "{{ .ICEBERG_POSTGRES_PASSWORD }}"
+        CATALOG_CATALOG__IMPL: com.postgresql.jdbc.Driver
+        CATALOG_URI: jdbc:postgresql://postgres16-rw.database.svc.cluster.local:5432/iceberg
+        CATALOG_JDBC_USER: "{{ .ICEBERG_POSTGRES_USER }}"
+        CATALOG_JDBC_PASSWORD: "{{ .ICEBERG_POSTGRES_PASSWORD }}"
         CATALOG_S3_ENDPOINT: http://minio.default.svc.cluster.local:9000
         CATALOG_WAREHOUSE: s3://iceberg
         CATALOG_IO__IMPL: org.apache.iceberg.aws.s3.S3FileIO
