--- a/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
@@ -19,7 +19,7 @@ spec:
         INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        CATALOG_CATALOG__IMPL: com.postgresql.jdbc.Driver
+        CATALOG_CATALOG__IMPL: org.apache.iceberg.jdbc.JdbcCatalog
         CATALOG_URI: jdbc:postgresql://postgres16-rw.database.svc.cluster.local:5432/iceberg
         CATALOG_JDBC_USER: "{{ .ICEBERG_POSTGRES_USER }}"
         CATALOG_JDBC_PASSWORD: "{{ .ICEBERG_POSTGRES_PASSWORD }}"
