fix(iceberg): add persistence

--- a/kubernetes/apps/ml-system/iceberg/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/helmrelease.yaml
@@ -78,3 +78,7 @@ spec:
         ports:
           http:
             port: *port
+    persistence:
+      tmp:
+        type: emptyDir
+        size: 500Mi
