fix(iceberg): try sqlite in volsync

--- a/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
@@ -26,6 +26,7 @@ spec:
         CATALOG_S3_ENDPOINT: http://minio.default.svc.cluster.local:9000
         CATALOG_WAREHOUSE: s3://iceberg
         CATALOG_IO__IMPL: org.apache.iceberg.aws.s3.S3FileIO
+        CATALOG_URI: jdbc:sqlite:/config/catalog.db
   dataFrom:
     # - extract:
     #     key: cloudnative-pg
