--- a/kubernetes/apps/ml-system/iceberg/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/helmrelease.yaml
@@ -27,14 +27,6 @@ spec:
       iceberg:
         annotations:
           reloader.stakater.com/auto: "true"
-        # initContainers:
-        #   init-db:
-        #     image:
-        #       repository: ghcr.io/solanyn/postgres-init
-        #       tag: 16
-        #     envFrom: &envFrom
-        #       - secretRef:
-        #           name: iceberg-secret
         containers:
           app:
             image:
@@ -79,6 +71,5 @@ spec:
           http:
             port: *port
     persistence:
-      tmp:
-        type: emptyDir
-        size: 500Mi
+      config:
+        existingClaim: *app
