chore: add dask helm repo

--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./controlplaneio.yaml
   - ./coredns.yaml
   - ./csi-driver-nfs.yaml
+  - ./dask.yaml
   - ./descheduler.yaml
   - ./emqx.yaml
   - ./external-dns.yaml
