--- a/kubernetes/apps/ml-system/dask/ks.yaml
+++ b/kubernetes/apps/ml-system/dask/ks.yaml
@@ -9,8 +9,31 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/gatus/guarded
   interval: 30m
   path: ./kubernetes/apps/ml-system/dask/app
+  prune: false
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
+  wait: true
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app dask-cluster
+  namespace: &namespace ml-system
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  interval: 30m
+  path: ./kubernetes/apps/ml-system/dask/cluster
   prune: false
   sourceRef:
     kind: GitRepository
