--- a/kubernetes/apps/ml-system/flyte/ks.yaml
+++ b/kubernetes/apps/ml-system/flyte/ks.yaml
@@ -9,6 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/gatus/guarded
   interval: 30m
   path: ./kubernetes/apps/ml-system/flyte/app
   prune: false
