--- a/kubernetes/apps/ml-system/dask/cluster/cluster.yaml
+++ b/kubernetes/apps/ml-system/dask/cluster/cluster.yaml
@@ -52,6 +52,9 @@ spec:
           periodSeconds: 20
     service:
       type: LoadBalancer
+      annotations:
+        external-dns.alpha.kubernetes.io/hostname: dask.goyangi.cloud
+        lbipam.cilium.io/ips: 192.168.1.140
       selector:
         dask.org/cluster-name: dask-cluster
         dask.org/component: scheduler
