--- a/kubernetes/apps/ml-system/dask/cluster/cluster.yaml
+++ b/kubernetes/apps/ml-system/dask/cluster/cluster.yaml
@@ -47,10 +47,7 @@ spec:
           initialDelaySeconds: 15
           periodSeconds: 20
     service:
-      type: LoadBalancer
-      annotations:
-        external-dns.alpha.kubernetes.io/hostname: dask.goyangi.cloud
-        lbipam.cilium.io/ips: 192.168.1.140
+      type: ClusterIP
       selector:
         dask.org/cluster-name: dask-cluster
         dask.org/component: scheduler
