--- a/kubernetes/apps/ml-system/dask/ks.yaml
+++ b/kubernetes/apps/ml-system/dask/ks.yaml
@@ -9,13 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  components:
-    - ../../../../components/gatus/guarded
   interval: 30m
   path: ./kubernetes/apps/ml-system/dask/app
-  postBuild:
-    substitute:
-      APP: *app
   prune: false
   sourceRef:
     kind: GitRepository
@@ -35,8 +30,14 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/gatus/guarded
   interval: 30m
   path: ./kubernetes/apps/ml-system/dask/cluster
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_SUBDOMAIN: dask
   prune: false
   sourceRef:
     kind: GitRepository
