--- a/kubernetes/apps/default/filebrowser/ks.yaml
+++ b/kubernetes/apps/default/filebrowser/ks.yaml
@@ -10,6 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
+  dependsOn:
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
   interval: 30m
   path: ./kubernetes/apps/default/filebrowser/app
   postBuild:
