--- a/kubernetes/apps/default/plex/ks.yaml
+++ b/kubernetes/apps/default/plex/ks.yaml
@@ -13,8 +13,12 @@ spec:
     - ../../../../components/gatus/external
     - ../../../../components/volsync
   dependsOn:
+    - name: intel-device-plugin-gpu
+      namespace: kube-system
     - name: onepassword-store
       namespace: external-secrets
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
   interval: 30m
