--- a/kubernetes/apps/default/qbittorrent/ks.yaml
+++ b/kubernetes/apps/default/qbittorrent/ks.yaml
@@ -15,6 +15,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
   interval: 30m
@@ -44,6 +46,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
+    - name: qbittorrent
+      namespace: default
     - name: onepassword-store
       namespace: external-secrets
   interval: 30m
