--- a/kubernetes/apps/default/readarr/ks.yaml
+++ b/kubernetes/apps/default/readarr/ks.yaml
@@ -14,6 +14,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: cloudnative-pg-cluster
       namespace: database
   interval: 30m
