--- a/kubernetes/apps/default/romm/ks.yaml
+++ b/kubernetes/apps/default/romm/ks.yaml
@@ -17,6 +17,8 @@ spec:
       namespace: external-secrets
     - name: cloudnative-pg-cluster
       namespace: database
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
   interval: 30m
   path: ./kubernetes/apps/default/romm/app
   postBuild:
