chore: update status checks in workflows

--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -20,7 +20,7 @@ env:
   HOMEBREW_NO_ANALYTICS: "1"
 
 jobs:
-  sync:
+  helm-repository-sync:
     name: Helm Repository Sync
     runs-on: ["home-ops-runner"]
     steps:
@@ -70,3 +70,16 @@ jobs:
         run: |
           flux --namespace ${{ github.event.inputs.helmRepoNamespace }} \
               reconcile source helm ${{ github.event.inputs.helmRepoName }} || true
+
+  helm-repository-sync-status:
+    needs: ["helm-repository-sync"]
+    name: Helm Repository Sync Success
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    steps:
+      - name: Any jobs failed?
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
+      - name: All jobs passed or skipped
+        if: ${{ !(contains(needs.*.result, 'failure')) }}
+        run: echo "All jobs passed or skipped" && echo "${{ toJSON(needs.*.result) }}"
