--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -17,8 +17,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
-  targetNamespace: flux-system
+  targetNamespace: flux-system # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
   timeout: 5m
   wait: true
 ---
