--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -7,20 +7,17 @@
     ":disableRateLimiting",
     ":dependencyDashboard",
     ":semanticCommits",
-    ":separatePatchReleases",
-    ":skipStatusChecks",
     ":timezone(Australia/Sydney)",
-    "github>solanyn/homelab//.github/renovate/autoMerge.json5",
-    "github>solanyn/homelab//.github/renovate/customManagers.json5",
-    "github>solanyn/homelab//.github/renovate/grafanaDashboards.json5",
-    "github>solanyn/homelab//.github/renovate/groups.json5",
-    "github>solanyn/homelab//.github/renovate/labels.json5",
-    "github>solanyn/homelab//.github/renovate/packageRules.json5",
-    "github>solanyn/homelab//.github/renovate/semanticCommits.json5"
+    "github>solanyn/home-ops//.renovate/autoMerge.json5",
+    "github>solanyn/home-ops//.renovate/customManagers.json5",
+    "github>solanyn/home-ops//.renovate/grafanaDashboards.json5",
+    "github>solanyn/home-ops//.renovate/groups.json5",
+    "github>solanyn/home-ops//.renovate/labels.json5",
+    "github>solanyn/home-ops//.renovate/packageRules.json5",
+    "github>solanyn/home-ops//.renovate/semanticCommits.json5"
   ],
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
-  "requireConfig": "ignored",
   "ignorePaths": ["**/*.sops.*", "**/resources/**"],
   "flux": {
     "fileMatch": [
