--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -6,89 +6,64 @@ tasks:
 
   apply-node:
     desc: Apply Talos config to a node [IP=required] [MODE=auto]
-    cmds:
-      - task: down
-      - minijinja-cli {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2 | op inject | talosctl --nodes {{.IP}} apply-config --mode {{.MODE}} --config-patch @{{.TALOS_DIR}}/nodes/{{.IP}}.yaml --file /dev/stdin
-      - talosctl --nodes {{.IP}} health
-      - task: up
+    cmd: |
+      bash {{.SCRIPTS_DIR}}/render-machine-config.sh {{.TALOS_DIR}}/{{.MACHINE_TYPE}}.yaml.j2 {{.TALOS_DIR}}/nodes/{{.IP}}.yaml.j2 \
+        | talosctl --nodes {{.IP}} apply-config --mode {{.MODE}} --file /dev/stdin
     vars:
       MODE: '{{.MODE | default "auto"}}'
-      TALOS_MACHINE_TYPE:
+      MACHINE_TYPE:
         sh: talosctl --nodes {{.IP}} get machinetypes --output=jsonpath='{.spec}'
     requires:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
-      - test -f {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2
-      - test -f {{.TALOS_DIR}}/nodes/{{.IP}}.yaml
-      - test -f {{.ROOT_DIR}}/talosconfig
-      - which minijinja-cli op talosctl
+      - test -f {{.SCRIPTS_DIR}}/render-machine-config.sh
+      - which talosctl
 
   upgrade-node:
-    desc: Upgrade Talos on a single node [IP=required]
-    cmds:
-      - task: down
-      - talosctl --nodes {{.IP}} upgrade --image="{{.TALOS_IMAGE}}" --timeout=10m
-      - talosctl --nodes {{.IP}} health
-      - task: up
+    desc: Upgrade Talos on a single node [IP=required] [MODE=powercycle]
+    cmd: talosctl --nodes {{.IP}} upgrade --image="{{.FACTORY_IMAGE}}" --reboot-mode={{.MODE}} --timeout=10m
     vars:
-      TALOS_MACHINE_TYPE:
-        sh: talosctl --nodes {{.IP}} get machinetypes --output=jsonpath='{.spec}'
-      TALOS_IMAGE:
-        sh: minijinja-cli {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2 | yq '.machine.install.image'
+      MODE: '{{.MODE | default "powercycle"}}'
+      FACTORY_IMAGE:
+        sh: minijinja-cli {{.TALOS_DIR}}/nodes/{{.IP}}.yaml.j2 | yq --exit-status '.machine.install.image'
     requires:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
-      - talosctl config info
-      - test -f {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2
-      - test -f {{.TALOS_DIR}}/nodes/{{.IP}}.yaml
-      - test -f {{.ROOT_DIR}}/talosconfig
+      - test -f {{.TALOS_DIR}}/nodes/{{.IP}}.yaml.j2
       - which minijinja-cli talosctl yq
 
   upgrade-k8s:
     desc: Upgrade Kubernetes across the whole cluster
-    cmds:
-      - task: down
-      - talosctl --nodes {{.RANDOM_CONTROLLER}} upgrade-k8s --to $KUBERNETES_VERSION
-      - task: up
+    cmd: talosctl --nodes {{.NODE}} upgrade-k8s --to $KUBERNETES_VERSION
     vars:
-      RANDOM_CONTROLLER:
-        sh: talosctl config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
+      NODE:
+        sh: talosctl config info --output json | jq --exit-status --raw-output '.endpoints[]' | shuf -n 1
     preconditions:
-      - talosctl --nodes {{.RANDOM_CONTROLLER}} get machineconfig
-      - talosctl config info
-      - test -f {{.ROOT_DIR}}/talosconfig
+      - talosctl --nodes {{.NODE}} get machineconfig
       - which jq talosctl
 
   reboot-node:
-    desc: Reboot Talos on a single node [IP=required] [MODE=default]
-    cmds:
-      - task: down
-      - talosctl --nodes {{.IP}} reboot --mode={{.MODE}}
-      - talosctl --nodes {{.IP}} health
-      - task: up
+    desc: Reboot Talos on a single node [IP=required] [MODE=powercycle]
+    cmd: talosctl --nodes {{.IP}} reboot --mode={{.MODE}}
     vars:
-      MODE: '{{.MODE | default "default"}}'
+      MODE: '{{.MODE | default "powercycle"}}'
     requires:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
-      - talosctl config info
-      - test -f {{.ROOT_DIR}}/talosconfig
       - which talosctl
 
   shutdown-cluster:
     desc: Shutdown Talos across the whole cluster
     prompt: Shutdown the Talos cluster ... continue?
-    cmd: talosctl shutdown --nodes {{.IP_ADDRS}} --force
+    cmd: talosctl shutdown --nodes {{.NODES}} --force
     vars:
-      IP_ADDRS:
-        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
+      NODES:
+        sh: talosctl config info --output json | jq --exit-status --join-output '[.nodes[]] | join(",")'
     preconditions:
       - talosctl --nodes {{.NODES}} get machineconfig
-      - talosctl config info
-      - test -f {{.ROOT_DIR}}/talosconfig
       - which jq talosctl
 
   reset-node:
@@ -99,46 +74,25 @@ tasks:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
-      - talosctl config info
-      - test -f {{.ROOT_DIR}}/talosconfig
       - which talosctl
 
   reset-cluster:
     desc: Reset Talos across the whole cluster
     prompt: Reset the Talos cluster ... continue?
-    cmd: talosctl reset --nodes {{.IP_ADDRS}} --graceful=false
+    cmd: talosctl reset --nodes {{.NODES}} --graceful=false
     vars:
-      IP_ADDRS:
-        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
+      NODES:
+        sh: talosctl config info --output json | jq --exit-status --join-output '[.nodes[]] | join(",")'
     preconditions:
       - talosctl --nodes {{.NODES}} get machineconfig
-      - talosctl config info
-      - test -f {{.ROOT_DIR}}/talosconfig
       - which jq talosctl
 
   kubeconfig:
     desc: Generate the kubeconfig for a Talos cluster
-    cmd: talosctl kubeconfig --nodes {{.RANDOM_CONTROLLER}} --force --force-context-name main {{.ROOT_DIR}}
+    cmd: talosctl kubeconfig --nodes {{.NODE}} --force --force-context-name main {{.ROOT_DIR}}
     vars:
-      RANDOM_CONTROLLER:
-        sh: talosctl config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
+      NODE:
+        sh: talosctl config info --output json | jq --exit-status --raw-output '.endpoints[]' | shuf -n 1
     preconditions:
-      - talosctl config info
-      - test -f {{.ROOT_DIR}}/talosconfig
+      - talosctl --nodes {{.NODE}} get machineconfig
       - which jq talosctl
-
-  down:
-    internal: true
-    cmds:
-      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
-      - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
-    preconditions:
-      - which kubectl
-
-  up:
-    internal: true
-    cmds:
-      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
-      - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
-    preconditions:
-      - which kubectl
