--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -22,7 +22,7 @@ releases:
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/cilium/app/helm-values.yaml']
     hooks:
       - events: ['postsync']
-        command: '{{ requiredEnv "ROOT_DIR" }}/scripts/cilium-config.sh'
+        command: '{{ requiredEnv "ROOT_DIR" }}/scripts/apply-cilium-config.sh'
         showlogs: true
 
   - name: coredns
@@ -49,14 +49,14 @@ releases:
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
-    version: 0.15.0
+    version: 0.14.0
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/app/helm-values.yaml']
     needs: ['external-secrets/external-secrets']
 
   - name: flux-instance
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
-    version: 0.15.0
+    version: 0.14.0
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml']
     needs: ['flux-system/flux-operator']
     wait: false
