fix(dask): pathType

--- a/kubernetes/apps/ml-system/dask/cluster/ingress.yaml
+++ b/kubernetes/apps/ml-system/dask/cluster/ingress.yaml
@@ -10,7 +10,7 @@ spec:
       http:
         paths:
           - path: /
-            pathType: Path
+            pathType: Prefix
             backend:
               service:
                 name: dask-cluster-scheduler
