chore: update renovate config locations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,12 +24,12 @@
     },
     "material-icon-theme.folders.associations": {
         // top level
+        ".github/workflows": "ci",
+        ".private": "archive",
+        ".renovate": "robot",
         "bootstrap": "seeders",
         "flux": "pipe",
         "talos": "linux",
-        // .github
-        ".github/renovate": "robot",
-        ".github/workflows": "ci",
         // namespaces
         "actions-runner-system": "github",
         "cert-manager": "guard",
