--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -14,27 +14,33 @@ on:
         required: true
   pull_request:
     branches: ["main"]
-    paths: ["kubernetes/**/helmrelease.yaml"]
 
 env:
   HOMEBREW_NO_ANALYTICS: "1"
 
 jobs:
-  helm-repository-sync:
-    name: Helm Repository Sync
-    runs-on: ["home-ops-runner"]
+  pre-job:
+    runs-on: ubuntu-latest
+    outputs:
+      any_changed: ${{ steps.changed-files.outputs.any_changed }}
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: "${{ secrets.BOT_APP_ID }}"
-          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
-
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Get Changed Files
+        id: changed-files
+        uses: tj-actions/changed-files@v45
         with:
-          token: "${{ steps.app-token.outputs.token }}"
+          files: kubernetes/**/helmrelease.yaml
+
+  helm-repository-sync:
+    name: Helm Repository Sync
+    needs: pre-job
+    runs-on: home-ops-runner
+    if: ${{ needs.pre-job.outputs.any_changed == 'true' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup Homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -72,7 +78,7 @@ jobs:
               reconcile source helm ${{ github.event.inputs.helmRepoName }} || true
 
   helm-repository-sync-status:
-    needs: ["helm-repository-sync"]
+    needs: helm-repository-sync
     name: Helm Repository Sync Success
     runs-on: ubuntu-latest
     if: ${{ always() }}
