chore(cilium): blank out tolerations in the Flux HR instead

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -23,54 +23,38 @@ spec:
     - kind: ConfigMap
       name: cilium-helm-values
   values:
+    # hubble:
+    #   enabled: true
+    #   metrics:
+    #     enabled:
+    #       - dns:query
+    #       - drop
+    #       - tcp
+    #       - flow
+    #       - port-distribution
+    #       - icmp
+    #       - http
+    #     serviceMonitor:
+    #       enabled: true
+    #     dashboards:
+    #       enabled: true
+    #       annotations:
+    #         grafana_folder: Cilium
+    #   relay:
+    #     enabled: true
+    #     rollOutPods: true
+    #     prometheus:
+    #       serviceMonitor:
+    #         enabled: true
+    #   ui:
+    #     enabled: true
+    #     rollOutPods: true
+    #     ingress:
+    #       enabled: true
+    #       className: internal
+    #       hosts: ["hubble.goyangi.cloud"]
+    operator:
+      tolerations: []
     resources:
       requests:
         cpu: 10m
-    hubble:
-      enabled: true
-      metrics:
-        enabled:
-          - dns:query
-          - drop
-          - tcp
-          - flow
-          - port-distribution
-          - icmp
-          - http
-        serviceMonitor:
-          enabled: true
-        dashboards:
-          enabled: true
-          annotations:
-            grafana_folder: Cilium
-      relay:
-        enabled: true
-        rollOutPods: true
-        prometheus:
-          serviceMonitor:
-            enabled: true
-      ui:
-        enabled: true
-        rollOutPods: true
-        ingress:
-          enabled: true
-          className: internal
-          hosts: ["hubble.goyangi.cloud"]
-    operator:
-      prometheus:
-        enabled: true
-        serviceMonitor:
-          enabled: true
-      dashboards:
-        enabled: true
-        annotations:
-          grafana_folder: Cilium
-    prometheus:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-        trustCRDsExist: true
-    dashboards:
-      enabled: true
-      annotations:
-        grafana_folder: Cilium
