--- a/kubernetes/apps/kube-system/cilium/config/kustomization.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/kustomization.yaml
@@ -1,4 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cilium-l2.yaml
+  - ./kube-api.yaml
+  - ./l2.yaml
+  # - ./l3.yaml
+  - ./pool.yaml
