fix(seasonpackarr): client name

--- a/kubernetes/apps/default/seasonpackarr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/seasonpackarr/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
         SEASONPACKARR__API_TOKEN: "{{ .SEASONPACKARR_API_TOKEN }}"
         config.yaml: |
           clients:
-            default:
+            qBittorrent:
               host: "http://qbittorrent.default.svc.cluster.local"
               port: 8080
               username: "{{ .QBITTORRENT_USER }}"
