--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -3,15 +3,6 @@
 name: "Helm Repository Sync"
 
 on:
-  workflow_dispatch:
-    inputs:
-      helmRepoNamespace:
-        description: Helm Repository Namespace
-        default: flux-system
-        required: true
-      helmRepoName:
-        description: Helm Repository Name
-        required: true
   pull_request:
     branches: ["main"]
 
@@ -50,16 +41,14 @@ jobs:
       - name: Setup Workflow Tools
         run: brew install fluxcd/tap/flux
 
-      - if: ${{ github.event.inputs.helmRepoNamespace == '' && github.event.inputs.helmRepoName == '' }}
-        name: Get Changed Files
+      - name: Get Changed Files
         id: changed-files
         uses: tj-actions/changed-files@v45
         with:
           files: kubernetes/**/helmrelease.yaml
           safe_output: false
 
-      - if: ${{ github.event.inputs.helmRepoNamespace == '' && github.event.inputs.helmRepoName == '' }}
-        name: Sync Helm Repository
+      - name: Sync Helm Repository
         run: |
           declare -A repos=()
           for f in ${{ steps.changed-files.outputs.all_changed_and_modified_files }}; do
@@ -72,12 +61,6 @@ jobs:
               flux --namespace ${repo_namespace} \
                   reconcile source helm ${repo_name} || true
           done
-
-      - if: ${{ github.event.inputs.helmRepoNamespace != '' && github.event.inputs.helmRepoName != '' }}
-        name: Sync Helm Repository
-        run: |
-          flux --namespace ${{ github.event.inputs.helmRepoNamespace }} \
-              reconcile source helm ${{ github.event.inputs.helmRepoName }} || true
 
   helm-repository-sync-status:
     needs: helm-repository-sync
