chore(ci): update needs for selfhosted runners

--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -85,7 +85,7 @@ jobs:
 
   pre-pull-images:
     name: Pre-pull Images
-    runs-on: ["home-ops-runner"]
+    runs-on: home-ops-runner
     needs: ["pre-job", "compare-images"]
     strategy:
       matrix:
