chore(ci): add pre-job names

--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -12,6 +12,7 @@ concurrency:
 
 jobs:
   pre-job:
+    name: Flux Local Pre-Job
     runs-on: ubuntu-latest
     outputs:
       any_changed: ${{ steps.changed-files.outputs.any_changed }}
