--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -7,7 +7,7 @@
       "automerge": true,
       "automergeType": "branch",
       "matchUpdateTypes": ["digest"],
-      "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/solanyn"],
+      "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p", "ghcr.io/solanyn"],
       "ignoreTests": true
     },
     {
