--- a/kubernetes/apps/default/autobrr/app/kustomization.yaml
+++ b/kubernetes/apps/default/autobrr/app/kustomization.yaml
@@ -1,9 +1,11 @@
+---
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
+  - ./prometheusrule.yaml
 configMapGenerator:
   - name: autobrr-loki-rules
     files:
@@ -13,3 +15,5 @@ configMapGenerator:
         loki_rule: "true"
 generatorOptions:
   disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
