feat(flyte): disable auth

--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -49,7 +49,7 @@ spec:
                   accessKey: "{{ .MINIO_ROOT_USER }}"
                   secretKey: "{{ .MINIO_ROOT_PASSWORD }}"
             auth:
-              enabled: true
+              enabled: false
               oidc:
                 baseUrl: https://id.goyangi.cloud
                 clientId: "{{ .FLYTE_OIDC_CLIENT_ID }}"
