chore(ci): update helm repo sync workflow

--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -41,10 +41,9 @@ jobs:
 
       - name: Sync Helm Repository
         env:
-          FILTER: '.spec.chart.spec.sourceRef | [{"name": .name, "namespace": .namespace}] | unique_by(.name)'
+          FILTER: '[.spec.chart.spec.sourceRef] | unique | .[] | "\(.namespace) \(.name)"'
         run: |
-          yq eval-all --no-doc "${FILTER}" ${{ needs.pre-job.outputs.all_changed_and_modified_files }} \
-            | yq '.[] | .namespace + " " + .name' \
+          yq eval-all "${FILTER}" ${{ needs.pre-job.outputs.all_changed_and_modified_files }} \
             | xargs -l bash -c 'flux --namespace $0 reconcile source helm $1'
 
   helm-repository-sync-status:
