chore: update flux receiver, provider and alert names

--- a/kubernetes/apps/flux-system/flux-operator/instance/github-webhook/receiver.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/github-webhook/receiver.yaml
@@ -3,12 +3,10 @@
 apiVersion: notification.toolkit.fluxcd.io/v1
 kind: Receiver
 metadata:
-  name: home-ops
+  name: github-webhook
 spec:
   type: github
-  events:
-    - ping
-    - push
+  events: ["ping", "push"]
   secretRef:
     name: github-webhook-token-secret
   resources:
