--- a/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./prometheusrule.yaml
-  - ./webhook
+  - ./github-webhook
 configMapGenerator:
   - name: flux-instance-helm-values
     files:
