revert: add separate grpc ingress

--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -96,10 +96,9 @@ spec:
               nginx.ingress.kubernetes.io/ssl-redirect: "true"
             httpAnnotations:
               nginx.ingress.kubernetes.io/app-root: /console
+            grpcAnnotations:
+              nginx.ingress.kubernetes.io/backend-protocol: GRPC
             host: flyte.goyangi.cloud
-            separateGrpcIngress: true
-            separateGrpcIngressAnnotations:
-              nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
           serviceAccount:
             create: true
   dataFrom:
