--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -31,6 +31,7 @@ resources:
   - ./node-feature-discovery.yaml
   - ./openebs.yaml
   - ./piraeus.yaml
+  - ./prefect.yaml
   - ./prometheus-community.yaml
   - ./rook-ceph.yaml
   - ./seldonio.yaml
