--- a/kubernetes/apps/ml-system/mlflow/ks.yaml
+++ b/kubernetes/apps/ml-system/mlflow/ks.yaml
@@ -17,6 +17,10 @@ spec:
       namespace: external-secrets
     - name: cloudnative-pg-cluster
       namespace: database
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
+    - name: volsync
+      namespace: volsync-system
   interval: 30m
   path: ./kubernetes/apps/ml-system/mlflow/app
   prune: false
