feat: deploy meilisearch

--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
   - ./jupyterhub.yaml
   - ./kafka.yaml
   - ./kuberay.yaml
+  - ./meilisearch.yaml
   - ./metrics-server.yaml
   - ./node-feature-discovery.yaml
   - ./openebs.yaml
