--- a/kubernetes/flux/meta/repositories/helm/prefect.yaml
+++ b/kubernetes/flux/meta/repositories/helm/prefect.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: meilisearch
+  name: prefect
   namespace: flux-system
 spec:
   interval: 12h
