fix(prefect): add resources

--- a/kubernetes/apps/ml-system/prefect/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/prefect/app/helmrelease.yaml
@@ -49,6 +49,10 @@ spec:
         envFrom:
           - secretRef:
               name: prefect-server-secret
+    resources:
+      requests:
+        cpu: 10m
+        memory: 128Mi
     service:
       type: ClusterIP
       port: 4200
@@ -59,7 +63,6 @@ spec:
         hostname: prefect.goyangi.cloud
         path: /
         pathType: Prefix
-          10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
       tls: true
     postgresql:
       enabled: false
