fix(prefect): init-db as extraContainer
yuck

--- a/kubernetes/apps/ml-system/prefect/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/prefect/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       retries: 3
   values:
     server:
-      extraInitContainers:
+      extraContainers:
         - name: init-db
           image: ghcr.io/solanyn/postgres-init:16
           envFrom:
