--- a/kubernetes/apps/ml-system/prefect/app/job.yaml
+++ b/kubernetes/apps/ml-system/prefect/app/job.yaml
@@ -6,12 +6,11 @@ metadata:
 spec:
   template:
     spec:
+      ttlSecondsAfterFinished: 60
       containers:
         - name: init-db
           image: ghcr.io/solanyn/postgres-init:16
           envFrom:
             - secretRef:
                 name: prefect-secret
-      restartPolicy: Never
-  backoffLimit: 4
 
