chore: remove node-feature-discovery nfd

--- a/kubernetes/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
@@ -23,12 +23,10 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
-    - name: node-feature-discovery
-      namespace: kube-system
   values:
-    controllerExtraArgs: |
-      - --devices=gpu
+    manager:
+      devices:
+        gpu: true
     resources:
       requests:
         cpu: 10m
