chore(renovate): use matchPackageNames

--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -4,8 +4,8 @@
     {
       "description": ["1Password Connect Group"],
       "groupName": "1Password Connnect",
-      "matchPackagePatterns": ["1password/connect"],
       "matchDatasources": ["docker"],
+      "matchPackageNames": ["/1password/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -13,8 +13,8 @@
     {
       "description": ["Actions Runner Controller Group"],
       "groupName": "Actions Runner Controller",
-      "matchPackagePatterns": ["gha-runner-scale-set"],
       "matchDatasources": ["docker", "helm"],
+      "matchPackageNames": ["/gha-runner-scale-set/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -22,8 +22,8 @@
     {
       "description": ["Flux Operator Group"],
       "groupName": "Flux Operator",
-      "matchPackagePatterns": ["flux-operator", "flux-instance"],
       "matchDatasources": ["docker"],
+      "matchPackageNames": ["/flux-operator/", "/flux-instance/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -31,8 +31,8 @@
     {
       "description": ["Intel Device Plugins Group"],
       "groupName": "Intel-Device-Plugins",
-      "matchPackagePatterns": ["intel-device-plugins"],
       "matchDatasources": ["helm"],
+      "matchPackageNames": ["/intel-device-plugins/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -40,8 +40,8 @@
     {
       "description": ["Rook-Ceph Group"],
       "groupName": "Rook-Ceph",
-      "matchPackagePatterns": ["rook.ceph"],
       "matchDatasources": ["helm"],
+      "matchPackageNames": ["/rook.ceph/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
