--- a/.renovate/packageRules.json5
+++ b/.renovate/packageRules.json5
@@ -4,7 +4,7 @@
     {
       "description": ["Loose versioning for non-semver containers"],
       "matchDatasources": ["docker"],
-      "matchPackagePatterns": ["plex"],
+      "matchPackageNames": ["/plex/"],
       "versioning": "loose"
     }
   ]
