feat(minio): use community helm chart
*

--- a/kubernetes/apps/default/minio/app/externalsecret.yaml
+++ b/kubernetes/apps/default/minio/app/externalsecret.yaml
@@ -11,8 +11,8 @@ spec:
     name: minio-secret
     template:
       data:
-        MINIO_ROOT_USER: "{{ .MINIO_ROOT_USER }}"
-        MINIO_ROOT_PASSWORD: "{{ .MINIO_ROOT_PASSWORD }}"
+        rootUser: "{{ .MINIO_ROOT_USER }}"
+        rootPassword: "{{ .MINIO_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
         key: minio
