--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -29,6 +29,7 @@ resources:
   - ./kuberay.yaml
   - ./meilisearch.yaml
   - ./metrics-server.yaml
+  - ./minio.yaml
   - ./openebs.yaml
   - ./piraeus.yaml
   - ./prefect.yaml
