--- a/kubernetes/apps/default/minio/app/kustomization.yaml
+++ b/kubernetes/apps/default/minio/app/kustomization.yaml
@@ -2,7 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./storageclass.yaml
+  - ./pvc.yaml
   - ./externalsecret.yaml
   - ./gatus.yaml
   - ./helmrelease.yaml
-  - ./pvc.yaml
