--- a/kubernetes/apps/default/minio/app/pvc.yaml
+++ b/kubernetes/apps/default/minio/app/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-minio
+  name: minio
 spec:
   accessModes: ["ReadWriteMany"]
-  storageClassName: nfs-minio
+  storageClassName: minio-nfs
