fix(minio): add resources

--- a/kubernetes/apps/default/minio/app/pvc.yaml
+++ b/kubernetes/apps/default/minio/app/pvc.yaml
@@ -4,4 +4,7 @@ metadata:
   name: minio
 spec:
   accessModes: ["ReadWriteMany"]
+  resources:
+    requests:
+      storage: 10Gi
   storageClassName: minio-nfs
