fix(minio): add secret values

--- a/kubernetes/apps/default/minio/app/externalsecret.yaml
+++ b/kubernetes/apps/default/minio/app/externalsecret.yaml
@@ -13,6 +13,8 @@ spec:
       data:
         rootUser: "{{ .MINIO_ROOT_USER }}"
         rootPassword: "{{ .MINIO_ROOT_PASSWORD }}"
+        MINIO_CLIENT_ID: "{{ .MINIO_CLIENT_ID }}"
+        MINIO_CLIENT_SECRET: "{{ .MINIO_CLIENT_SECRET }}"
   dataFrom:
     - extract:
         key: minio
