--- a/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
+++ b/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
@@ -37,8 +37,8 @@ spec:
         containers:
           app:
             image:
-              repository: docker.io/stonith404/pocket-id
-              tag: v0.29.0@sha256:c2d1d06cf8fa2123893f9efc6234fe1bc5fa35cadde047b86f673042695cc4f9
+              repository: ghcr.io/pocket-id/pocket-id
+              tag: v0.35.4@sha256:9aa11fbf8f1bfd2443d3ada055239839f977e33262dfd7354062cec1fed14698
             command: ["/bin/sh", "/app/scripts/docker/entrypoint.sh"]
             env:
               DB_PROVIDER: postgres
